metadata/1.0.6/nb.md
# trackCO2 — App Store Connect Metadata

**Version:** 1.0.6  
**Locale:** Norwegian Bokmål  
**Locale code:** `nb`

---

## App Information

| Field | Value | Limit | Count |
|---|---|---|---|
| **Name** | trackCO2 | 30 | 8 |
| **Subtitle** | Spor ditt karbonfotavtrykk | 30 | 27 |
| **Promotional Text** | Møt Claud — sky-maskoten din som reagerer på CO₂-scoren din. Logg aktiviteter, planlegg grønnere reiser og få værbevisste gå-tips. | 170 | 122 |

---

## Keywords

```
karbon,CO2,klima,bærekraft,miljø,transport,helse,vær,tips,fotavtrykk,grønn
```

**Limit:** 100 characters · **Count:** 72

---

## Description

trackCO2 hjelper deg å forstå og redusere ditt personlige karbonfotavtrykk — dag for dag.

Logg aktivitetene som teller: bilkjøring, flyreiser, kollektivtransport, mat, energibruk hjemme, gange, sykling, treplanting og resirkulering. Se hvordan ditt faktiske CO₂-forbruk og kompensasjon utvikler seg gjennom uken med tydelige diagrammer.

**Møt Claud, karbon-maskoten din**  
Claud er en vennlig sky som gjenspeiler din ukentlige CO₂-helse. Ta grønnere valg og se Claud blomstre.

**Planlegg grønnere reiser**  
Sammenlign transportalternativer på det innebygde kartet. Ruter rangeres etter CO₂-påvirkning — det grønneste alternativet vises alltid først. Lagre reiser direkte i aktivitetsloggen.

**Synk med Apple Health**  
Importer automatisk skritt og gange-/løpedistanse fra HealthKit. Gjør daglig bevegelse om til logget kompensasjon uten ekstra innsats.

**Værbevisste forslag**  
Claud sjekker lokale vær- og luftkvalitetsforhold for å anbefale gange eller sykling når forholdene er gode — og advare når utendørs aktivitet ikke anbefales.

**Smarte, datadrevne tips**  
Få personlige innsikter fra loggede aktiviteter: brukstrender, høyimpact-utslipp, kompensasjonsgap, matbytter og grønnere alternativer med ekte kg CO₂-tall.

**Følg trender over tid**  
Ukentlige trender, forbruk vs. kompensasjon og mest brukte aktiviteter hjelper deg å oppdage mønstre og forbedre deg.

Abonnement og livstidsplaner låser opp hele trackCO2-opplevelsen. Start reisen mot en grønnere livsstil i dag.

---

## What's New in This Version

**Version 1.0.6**

- Møt din nye maskot — Claud reagerer nå på CO₂-scoren din i sanntid
- Værbevisste tips — Claud sjekker lokale forhold og foreslår beste tidspunkt for å gå, sykle eller ta kollektivtransport
- Smartere aktivitetstips — datadrevne innsikter med ekte CO₂-tall, brukstrender og konkrete forslag
- En renere og raskere opplevelse — redesignede kort, jevnere navigasjon og mer intuitivt oppsett
- Ny kartopplevelse — planlegg grønnere reiser med sanntidssammenligning av transport og CO₂-estimater på kartet

---

## URLs

| Field | URL |
|---|---|
| **Support URL** | `https://giusscos.com/trackco2/support` |
| **Marketing URL** | `https://giusscos.com/trackco2` |
| **Privacy Policy URL** | `https://giusscos.com/trackco2/privacy` |

---

## Categories

| | Category |
|---|---|
| **Primary** | Health & Fitness |
| **Secondary** | Lifestyle |

---

## Screenshots

See [screenshots.md](./screenshots.md) for device sizes and capture instructions.

### Suggested caption overlays

| # | Screen | Caption |
|---|---|---|
| 1 | Oversikt | Din CO₂ på ett blikk |
| 2 | Aktiviteter | Logg hvert klimavalg |
| 3 | Reiser / Kart | Velg den grønneste ruten |
| 4 | Tips | Tips basert på dine data |
| 5 | Vær | Gå når det lønner seg |

### How each screenshot should look

1. **Hero** — Claud-maskot i god form (mint/grønn), ukentlig CO₂-diagram, værkort synlig.
2. **Aktiviteter** — Liste med Bilreise, Tog, Gange, Storfe, osv.
3. **Reiser** — Bykart med rute; sammenligningskort for gange, buss og bil med CO₂-etiketter.
4. **Tips** — Tipskort med kg CO₂-tall og konkret anbefaling.
5. **Vær** — Kort «Flott tid for en tur!» med klart vær.

Capture on **iPhone 16 Pro Max** (1290×2796) with **Norwegian** system language.
